Fixed issue with feedback and tc api's
