# docs/swagger.json
@@ -350,19 +350,12 @@
                 "summary": "Create story feedback",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Story ID",
-                        "name": "storyId",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "Like",
-                        "name": "like",
+                        "description": "StoryFeedback request",
+                        "name": "storyFeedback",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "boolean"
+                            "$ref": "#/definitions/model.StoryFeedback"
                         }
                     }
                 ],
@@ -411,12 +404,12 @@
                 "summary": "Create TC",
                 "parameters": [
                     {
-                        "description": "Email request",
-                        "name": "emailRequest",
+                        "description": "Tc request",
+                        "name": "tc",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.EmailRequest"
+                            "$ref": "#/definitions/model.Tc"
                         }
                     }
                 ],
@@ -678,6 +671,31 @@
                     "type": "string"
                 },
                 "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.StoryFeedback": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "like": {
+                    "type": "boolean"
+                },
+                "storyId": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.Tc": {
+            "type": "object",
+            "properties": {
+                "accepted": {
+                    "type": "boolean"
+                },
+                "email": {
                     "type": "string"
                 }
             }
